syntax = "proto3";
package chat.auth.v1;

option java_multiple_files = true;
option java_package = "ink.bluballz.chat.auth.v1";
option java_outer_classname = "AuthProto";

message RegisterRequest { string email = 1; string password = 2; string display_name = 3; }
message LoginRequest    { string email = 1; string password = 2; }

message AuthTokens {
  string access_token = 1;
  string refresh_token = 2;
  int64  access_expires_at  = 3; // epoch seconds
  int64  refresh_expires_at = 4; // epoch seconds
}

message AuthResponse {
  string user_id      = 1;
  string email        = 2;
  string display_name = 3;
  AuthTokens tokens   = 4;
}

message RefreshRequest { string refresh_token = 1; }
message ValidateTokenRequest { string token = 1; }
message ValidateTokenResponse { bool valid = 1; string user_id = 2; string email = 3; }

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc Refresh(RefreshRequest) returns (AuthTokens);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}